feat: allow to see alerts and trigg notification for V4 APIs
APIM-8742